--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,165 @@
-.App {
-  text-align: center;
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Black.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Black.woff') format('woff');
+    font-weight: 900;
+    font-style: normal;
+    font-display: swap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-BlackItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-BlackItalic.woff') format('woff');
+    font-weight: 900;
+    font-style: italic;
+    font-display: swap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Bold.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Bold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-BoldItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-BoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
 }
 
-.App-link {
-  color: #61dafb;
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-ExtraBoldItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-ExtraBoldItalic.woff') format('woff');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-ExtraBold.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-ExtraBold.woff') format('woff');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-ExtraLight.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-ExtraLight.woff') format('woff');
+    font-weight: 200;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-ExtraLightItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-ExtraLightItalic.woff') format('woff');
+    font-weight: 200;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Italic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Italic.woff') format('woff');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Light.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Light.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-LightItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-LightItalic.woff') format('woff');
+    font-weight: 300;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-SemiBold.woff') format('woff');
+    font-weight: 600;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-MediumItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-MediumItalic.woff') format('woff');
+    font-weight: 500;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Medium.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Medium.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Regular.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Regular.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-Thin.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-Thin.woff') format('woff');
+    font-weight: 100;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-SemiBoldItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-SemiBoldItalic.woff') format('woff');
+    font-weight: 600;
+    font-style: italic;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('../src/Assets/fonts/Poppins-ThinItalic.woff2') format('woff2'),
+        url('../src/Assets/fonts/Poppins-ThinItalic.woff') format('woff');
+    font-weight: 100;
+    font-style: italic;
+    font-display: swap;
+}
+
+body{
+  font-family: 'Poppins';
 }
