Left secton on Progress

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,75 @@
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	vertical-align: baseline;
+	background: transparent;
+	font-weight: normal;
+	text-decoration: none;
+	outline: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+ol, ul {
+	list-style: none;
+}
+del {
+	text-decoration: line-through;
+}
+body {
+	font-family:  'Oswald',Arial, Helvetica, sans-serif;
+	font-size: 17px;
+	color: #1F1111;
+	overflow-x: hidden;
+	min-width: 320px;
+	font-weight: 500;
+}
+input,textarea,select{
+	font-family:  Arial, Helvetica, sans-serif;
+	font-weight: 500;
+}
+
+a{
+	color: #1F1111;
+}
+.thumb{
+	display: block;
+}
+.thumb img{
+	display: block;
+	width:100%;
+}
+p{
+	line-height:1.6em;
+	font-size: 16px;
+	font-family:  'Oswald',Arial;
+	font-weight: normal;
+	color: #000;
+}
+.hidden{
+	display:none;
+}
+br.clear {
+	clear: both;
+	line-height: 0;
+}
+.wrapper {
+	width: 80%;
+	margin: 0 auto;
+	max-width:1440px;
+}
+a:hover,
+.submit:hover {
+    filter: alpha(opacity=85);
+    -moz-opacity: 0.85;
+    -khtml-opacity: 0.85;
+    opacity: 0.85;
+}
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Black.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Black.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Black.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Black.woff') format('woff');
     font-weight: 900;
     font-style: normal;
     font-display: swap;
@@ -9,8 +77,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-BlackItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-BlackItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-BlackItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-BlackItalic.woff') format('woff');
     font-weight: 900;
     font-style: italic;
     font-display: swap;
@@ -18,8 +86,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Bold.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Bold.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Bold.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Bold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -27,8 +95,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-BoldItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-BoldItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-BoldItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-BoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -36,8 +104,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-ExtraBoldItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-ExtraBoldItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-ExtraBoldItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-ExtraBoldItalic.woff') format('woff');
     font-weight: bold;
     font-style: italic;
     font-display: swap;
@@ -45,8 +113,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-ExtraBold.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-ExtraBold.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-ExtraBold.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-ExtraBold.woff') format('woff');
     font-weight: bold;
     font-style: normal;
     font-display: swap;
@@ -54,8 +122,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-ExtraLight.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-ExtraLight.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-ExtraLight.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-ExtraLight.woff') format('woff');
     font-weight: 200;
     font-style: normal;
     font-display: swap;
@@ -63,8 +131,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-ExtraLightItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-ExtraLightItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-ExtraLightItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-ExtraLightItalic.woff') format('woff');
     font-weight: 200;
     font-style: italic;
     font-display: swap;
@@ -72,8 +140,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Italic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Italic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Italic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Italic.woff') format('woff');
     font-weight: normal;
     font-style: italic;
     font-display: swap;
@@ -81,8 +149,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Light.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Light.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Light.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Light.woff') format('woff');
     font-weight: 300;
     font-style: normal;
     font-display: swap;
@@ -90,8 +158,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-LightItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-LightItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-LightItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-LightItalic.woff') format('woff');
     font-weight: 300;
     font-style: italic;
     font-display: swap;
@@ -99,8 +167,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-SemiBold.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-SemiBold.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-SemiBold.woff') format('woff');
     font-weight: 600;
     font-style: normal;
     font-display: swap;
@@ -108,8 +176,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-MediumItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-MediumItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-MediumItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-MediumItalic.woff') format('woff');
     font-weight: 500;
     font-style: italic;
     font-display: swap;
@@ -117,8 +185,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Medium.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Medium.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Medium.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Medium.woff') format('woff');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -126,8 +194,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Regular.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Regular.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Regular.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Regular.woff') format('woff');
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -135,8 +203,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-Thin.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-Thin.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-Thin.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-Thin.woff') format('woff');
     font-weight: 100;
     font-style: normal;
     font-display: swap;
@@ -144,8 +212,8 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-SemiBoldItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-SemiBoldItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-SemiBoldItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-SemiBoldItalic.woff') format('woff');
     font-weight: 600;
     font-style: italic;
     font-display: swap;
@@ -153,13 +221,10 @@
 
 @font-face {
     font-family: 'Poppins';
-    src: url('../src/Assets/fonts/Poppins-ThinItalic.woff2') format('woff2'),
-        url('../src/Assets/fonts/Poppins-ThinItalic.woff') format('woff');
+    src: url('../src/assets/fonts/Poppins-ThinItalic.woff2') format('woff2'),
+        url('../src/assets/fonts/Poppins-ThinItalic.woff') format('woff');
     font-weight: 100;
     font-style: italic;
     font-display: swap;
 }
 
-body{
-  font-family: 'Poppins';
-}
